added animated player

--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,5 @@
 	padding: 			0px;
 	border: 			0px;
 	margin:				0px;
-	background-color: 	#FFF;
-}
-
-body {
-	background-color: 	#000;
+	background-color: 	#7dbce8;
 }
