--- a/css/style.css
+++ b/css/style.css
@@ -2,5 +2,9 @@
 	padding: 			0px;
 	border: 			0px;
 	margin:				0px;
-	background-color: 	#7dbce8;
+	/* background-color: 	#b6d6dc; */
+	background:	-webkit-linear-gradient(#b6d6dc, #fff); /* For Safari 5.1 to 6.0 */
+	background:	-o-linear-gradient(#b6d6dc, #fff); /* For Opera 11.1 to 12.0 */
+	background:	-moz-linear-gradient(#b6d6dc, #fff); /* For Firefox 3.6 to 15 */
+	background:	linear-gradient(#b6d6dc, #fff); /* Standard syntax */
 }
