--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,8 @@
 	border: 			0px;
 	margin:				0px;
 	/* background-color: 	#b6d6dc; */
-	background:	-webkit-linear-gradient(#b6d6dc, #fff); /* For Safari 5.1 to 6.0 */
-	background:	-o-linear-gradient(#b6d6dc, #fff); /* For Opera 11.1 to 12.0 */
-	background:	-moz-linear-gradient(#b6d6dc, #fff); /* For Firefox 3.6 to 15 */
-	background:	linear-gradient(#b6d6dc, #fff); /* Standard syntax */
+	background:	-webkit-linear-gradient(#63accc, #b6d6dc); /* For Safari 5.1 to 6.0 */
+	background:	-o-linear-gradient(#63accc, #b6d6dc); /* For Opera 11.1 to 12.0 */
+	background:	-moz-linear-gradient(#63accc, #b6d6dc); /* For Firefox 3.6 to 15 */
+	background:	linear-gradient(#63accc, #b6d6dc); /* Standard syntax */
 }
